tests/invalid/ann_assign_set_call_non_set_annotation/main.py
def run_case() -> None:
    x: int = set()
    print(x)


if __name__ == "__main__":
    run_case()
